--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,9 @@
     "tabs",
     "http://*/*",
     "https://*/*"
-  ]
+  ],
+  "icons": { "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  }
 }
